--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Satinder Bhatia</h2>
-								<p>Satinder Bhatia with over 25 years of experience in teaching Mathematics and related subjects was a lecturer in  mathematics and applied sciences in the Middle East College in Muscat, Oman. Her innovative teaching methods are focused on using the degital medium in making learning more interesting and long lasting.</br>
-									She was the pioneer in starting Flipped teaching in her college and her department was awarded the first prize for it.</br>
+								<p>Ms. Satinder Bhatia has over 25 years of experience in teaching mathematics and related subjects she was a lecturer in  mathematics and applied sciences in Middle East College, Muscat, Oman. Her innovative teaching methods are focussed on using the digital medium in making learning more interesting and long lasting.</br>
+									She was a pioneer in Flipped teaching in her college.</br>
 									She was awarded many prizes for her innovative practices at Middle East College. Her papers have been published in many international forums and she has presented some of them in international conferences. The last one being in Barcelona, Spain.</p>
 							</header>
 							<!-- <ul class="icons major">
